# Tarkibi

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt
tarkibi/: __init__.py  dataset.py  tarkibi.py  tarkibi_v2.py
tarkibi/audio/: diarization.py  noise_reduction.py  speaker_verification.py  transcription.py
tarkibi/utilities/: __init__.py  _config.py  agent.py  audio.py  general.py  youtube.py
