[tool.poetry]
name = "tarkibi"
version = "0.1.1"
description = "Tarkibi is a toolkit to build LJSPeech-like datasets"
authors = ["Ahmed"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pytube = "^15.0.0"
simple-diarizer = "^0.0.13"
spleeter = "^2.4.0"
llvmlite = "^0.40.1"
openai = "^0.28.0"
python-dotenv = "^1.0.0"
youtokentome = {git = "https://github.com/LahiLuk/YouTokenToMe"}
nemo-toolkit = {extras = ["asr"], version = "^1.20.0"}
librosa = "^0.10.1"
ruff = "^0.0.291"
black = "21.12b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
]